Added Adwin's Test Cases + Fixes