@@ -1,9 +1,10 @@
 import org.junit.jupiter.api.*;
-import static org.junit.jupiter.api.Assertions.*;
 
-import java.io.*;
+import java.io.IOException;
 import java.nio.file.*;
-import java.util.*;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
   * Test for the ItemListing object, testing to ensure all creations and functions work.
@@ -16,52 +17,82 @@ import java.util.*;
             @addy-ops
   * @version April, 2025
   */
+  class ItemListingTest {
 
-public class ItemListingTest {
+    private static final String TEST_AUCTION_FILE = "AuctionList.txt";
 
-    private static final Path AUCTION_FILE = Paths.get("AuctionList.txt");
-
-    @BeforeEach
-    void setup() throws IOException {
-        Files.write(AUCTION_FILE, new byte[0]);
-    }
-
-    @AfterEach
-    void cleanup() throws IOException {
-        Files.deleteIfExists(AUCTION_FILE);
+    @Test
+    void testCreateItemWritesToFile() throws IOException {
+        ItemListing item = new ItemListing("Laptop", "Gaming laptop", 300, "seller1", 2000);
+        String lines = Files.readString(Paths.get(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE));
+        assertFalse(lines.equals(""),"Auction file should not be empty after item creation");
+        assertTrue(lines.indexOf("Laptop") != -1 , "Item not written correctly to file");
     }
 
     @Test
-    void testCreateItemInitializesCorrectly() {
-        ItemListing item = new ItemListing("Item1", "Description", 50, "seller1", 2000);
-        assertEquals("Item1".replace(" ", "/"), item.getItemName());
-        assertEquals("Description".replace(" ", "/"), item.getItemDescription());
-        assertTrue(item.isActive());
+    void testSetItemName() throws IOException {
+        ItemListing item = new ItemListing("OldName", "desc", 100, "seller1", 2000);
+        item.setItemName("NewName");
+        String lastLine = getLastLine(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE);
+        assertTrue(lastLine.contains("NewName"), "Item name not updated in file");
     }
 
     @Test
-    void testSetBuyNowPriceUpdates() {
-        ItemListing item = new ItemListing("Item2", "Desc", 100, "seller1", 2000);
-        item.setBuyNowItemPrice(500.0);
-        assertEquals(500.0, item.getBuyNowItemPrice());
+    void testSetItemDescription() throws IOException {
+        ItemListing item = new ItemListing("Item12", "Old desc", 100, "seller1", 2000);
+        item.setItemDescription("Updated desc");
+        String lastLine = getLastLine(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE);
+        assertTrue(lastLine.contains("Updated/desc"), "Description not updated in file");
     }
 
     @Test
-    void testBuyNowFailsWithoutPrice() {
-        ItemListing item = new ItemListing("Item3", "Desc", 100, "seller1", 2000);
-        assertFalse(item.buyNow("buyer1"));
+    void testSetBuyNowItemPrice() throws IOException {
+        ItemListing item = new ItemListing("Item17", "desc", 100, "seller1", 2000);
+        item.setBuyNowItemPrice(500);
+        String lastLine = getLastLine(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE);
+        assertTrue(lastLine.contains("500.0"), "Buy-now price not updated");
+    }
+
+    @Test
+    void testPlaceValidBid() throws IOException {
+        ItemListing item = new ItemListing("Item", "desc", 200, "seller1", 2000);
+        item.placeBid(250, "buyer1");
+        String lastLine = getLastLine(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE);
+        assertTrue(lastLine.contains("buyer1"), "Valid bid not recorded in file");
+    }
+
+    @Test
+    void testPlaceInvalidBid() throws IOException {
+        ItemListing item = new ItemListing("Item", "desc", 200, "seller1", 2000);
+        item.placeBid(100, "buyer1");  // Too low
+        String lastLine = getLastLine(System.getProperty("user.dir") + "/src/serverclient/txt/" + TEST_AUCTION_FILE);
+        assertFalse(lastLine.contains("buyer1"), "Invalid bid should not be accepted");
+    }
+
+    @Test
+    void testBuyNowSuccess() throws IOException {
+        ItemListing item = new ItemListing("Item", "desc", 200, "seller1", 2000);
+        item.setBuyNowItemPrice(400);
+        boolean success = item.buyNow("buyer1");
+        assertTrue(success, "Buy-now should succeed with valid price");
+    }
+
+    @Test
+    void testBuyNowFailsWithoutPrice() throws IOException {
+        ItemListing item = new ItemListing("Item", "desc", 200, "seller1", 2000);
+        boolean success = item.buyNow("buyer1");
+        assertFalse(success, "Buy-now should fail when price is not set");
     }
 
     @Test
     void testAuctionEndsAutomatically() throws Exception {
-        ItemListing item = new ItemListing("Item4", "AutoEnd", 100, "seller1", 500);
-        Thread.sleep(1000);
-        assertFalse(item.isActive(), "Item should no longer be active after duration");
+        ItemListing item = new ItemListing("Item", "desc", 200, "seller1", 500); // 0.5 second
+        Thread.sleep(1000);  // wait for it to expire
+        assertFalse(item.isActive(), "Auction should automatically end after duration");
     }
 
-    public static void main(String[] args) {
-        org.junit.platform.console.ConsoleLauncher.main(
-                new String[]{"--select-class", "item.ItemListingTest"}
-        );
+    private String getLastLine(String filePath) throws IOException {
+        List<String> lines = Files.readAllLines(Paths.get(filePath));
+        return lines.get(lines.size() - 1);
     }
 }
